# spine2d

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
spine2d/: Cargo.toml
spine2d-web/: Cargo.toml  index.html
spine2d-web/assets/: demo.atlas  demo.json
spine2d-web/src/: lib.rs
spine2d-wgpu/: Cargo.toml
spine2d-wgpu/examples/: basic.rs  spine_runtimes.rs
spine2d-wgpu/src/: lib.rs  renderer.rs
spine2d/examples/: pose_dump.rs  pose_dump_scenario.rs  render_dump.rs
spine2d/src/: atlas.rs  binary.rs  binary_tests.rs  error.rs  geometry.rs  geometry_tests.rs  ids.rs  json.rs  json_event_tests.rs  json_physics_defaults_tests.rs  json_scale_tests.rs  json_transform_constraint_tests.rs  lib.rs  model.rs  render.rs  render_oracle_parity_tests.rs  render_tests.rs  version.rs
spine2d/src/runtime/: animation.rs  animation_state.rs  animation_state_mixing_semantics_tests.rs  animation_state_tests.rs  animation_tests.rs  color_timeline_tests.rs  deform_tests.rs  examples_pose_parity_tests.rs  examples_smoke_tests.rs  ik_tests.rs  ik_timeline_tests.rs  mod.rs  oracle_scenario_parity_tests.rs  path_constraint_solve_tests.rs  path_constraint_timeline_tests.rs  point_attachment_tests.rs  pose_integration_tests.rs  sequence_timeline_tests.rs  skeleton.rs  skeleton_tests.rs  skin_active_semantics_tests.rs  slot_timeline_tests.rs  slots_tests.rs  transform_constraint_tests.rs  transform_constraint_timeline_tests.rs  upstream_attachment_timeline_tests.rs  upstream_event_timeline_tests.rs  upstream_ik_demo_tests.rs  upstream_libgdx_physics_demo_tests.rs  upstream_spine_c_smoke_tests.rs  upstream_spine_skel_smoke_tests.rs  vine_smoke_tests.rs
spine2d/tests/golden/: SOURCE.txt
spine2d/tests/golden/oracle_scenarios/: alien_run_plus_death_add_to_empty_immediate_mix0_2_t0_1.json  celestial_circus_wind_idle_physics_jitter_dt_t1_0.json  celestial_circus_wind_idle_physics_t0_5.json  celestial_circus_wind_idle_physics_t10_0.json  celestial_circus_wind_idle_physics_update_pose_update_t1_0.json  celestial_circus_wind_idle_physics_update_reset_update_t1_0.json  cloud_pot_playing_in_the_rain_physics_jitter_dt_t1_0.json  cloud_pot_playing_in_the_rain_physics_t10_0.json  diamond_disappear_t0_8.json  diamond_idle_rotating_plus_idle_still_add_t0_5.json  diamond_idle_rotating_plus_idle_still_add_to_empty_mix0_2_t0_1.json  diamond_idle_rotating_plus_rotation_add_t0_5.json  dragon_flying_sequence_t0_65.json  dragon_flying_sequence_t0_98.json  dragon_flying_to_empty_t0_35.json  goblins_walk_dagger_t0_3.json  goblins_walk_skin_goblin_left_foot_deform_jitter_dt_t0_3.json  goblins_walk_skin_goblin_left_foot_deform_t0_3.json  goblins_walk_skin_goblingirl_left_foot_deform_jitter_dt_t0_3.json  goblins_walk_skin_goblingirl_left_foot_deform_t0_3.json  hero_idle_head_deform_jitter_dt_t0_55.json  hero_idle_head_deform_t0_55.json  hero_idle_plus_run_add_head_deform_jitter_dt_t0_55.json  hero_idle_plus_run_add_head_deform_t0_55.json  hero_idle_plus_run_add_to_empty_mix0_2_head_deform_jitter_dt_t0_55.json  hero_idle_plus_run_add_to_empty_mix0_2_head_deform_t0_55.json  mix_and_match_skin_switch_backpack_to_hat.json  mix_and_match_skin_switch_boy_to_girl.json  mix_and_match_skin_switch_hat_aware_t0_1667.json  mix_and_match_walk_plus_dress_up_add_t0_4.json  owl_idle_physics_jitter_dt_t1_0.json  owl_idle_physics_t0_5.json  owl_idle_physics_update_pose_update_t1_0.json  owl_idle_physics_update_reset_update_t1_0.json  owl_up_head_base_deform_jitter_dt_t0_55.json  owl_up_head_base_deform_t0_55.json  owl_up_l_wing_deform_jitter_dt_t0_55.json  owl_up_l_wing_deform_t0_55.json  owl_up_plus_blink_l_wing_jitter_dt_t0_5.json  owl_up_plus_blink_l_wing_t0_5.json  (+89 more)
spine2d/tests/golden/oracle_scenarios_skel/: alien_run_plus_death_add_to_empty_immediate_mix0_2_t0_1.json  celestial_circus_wind_idle_physics_jitter_dt_t1_0.json  celestial_circus_wind_idle_physics_t0_5.json  celestial_circus_wind_idle_physics_t10_0.json  celestial_circus_wind_idle_physics_update_pose_update_t1_0.json  celestial_circus_wind_idle_physics_update_reset_update_t1_0.json  cloud_pot_playing_in_the_rain_physics_jitter_dt_t10_0.json  cloud_pot_playing_in_the_rain_physics_t0_5.json  cloud_pot_playing_in_the_rain_physics_t1_0.json  cloud_pot_playing_in_the_rain_physics_update_reset_update_t1_0.json  diamond_disappear_t0_8.json  (+112 more)
(+63 files in other folders)
