[package]
name = "spine2d-web"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spine2d = { path = "../spine2d", version = "0.2.0", default-features = false, features = ["json"] }
spine2d-wgpu = { path = "../spine2d-wgpu", version = "0.2.0", default-features = false, features = ["json"] }
wgpu.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Event",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "HtmlOptionElement",
  "HtmlSelectElement",
  "HtmlSpanElement",
  "Location",
  "Node",
  "Response",
  "Window",
] }
